# customer-personality-analysis-elt

./: .gitignore  README.md  pyproject.toml
sql/: 10high_spend_customer_segments.sql  1demographic_influence.sql  2customer_loyalty.sql  3promotion_response_demographics.sql  4complaints_and_spending_campaign.sql  5impact_of_children_and_teenagers.sql  6discount_purchases_vs_spending.sql  7online_vs_offline_preferences.sql  8website_engagement_promotion_response.sql  9catalogue_purchases_demographics_high_value.sql  create_people_table.sql  create_place_table.sql  create_products_table.sql  create_promotion_table.sql  populate_people_table.sql  populate_place_table.sql  populate_products_table.sql  populate_promotion_table.sql
src/: extract.py  extractall.py  pyproject.toml  report.py  transform.py
