[tool.poetry]
name = "customer-personality-analysis-elt"
version = "0.1.0"
description = ""
authors = ["MalshaDissanayake <dmkmd333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
