[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["MalshaDissanayake <dmkmd333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.1.18"
psycopg-binary = "^3.1.18"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
